fix text alignment

--- a/frontend/src/Clock.css
+++ b/frontend/src/Clock.css
@@ -58,5 +58,6 @@
     display: flex;
     flex-direction: row-reverse;
     margin-bottom: 10px;
+    text-align: right;
   }
 }
